--- a/project/bundles/org.openntf.langchain4j.xsp/pom.xml
+++ b/project/bundles/org.openntf.langchain4j.xsp/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openntf.langchain4j.commons</artifactId>
+            <artifactId>org.openntf.langchain4j.domino</artifactId>
             <version>${project.version}</version>
         </dependency>
 
