--- a/project/bundles/org.openntf.langchain4j.xsp/pom.xml
+++ b/project/bundles/org.openntf.langchain4j.xsp/pom.xml
@@ -47,17 +47,14 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>5.1.9</version>
+                <version>6.0.0</version>
                 <extensions>true</extensions>
                 <configuration>
 					<manifestLocation>META-INF</manifestLocation>
                     <niceManifest>true</niceManifest>
-                    <excludeDependencies>
-                        kotlin-stdlib-common,
-                        kotlin-stdlib-jdk7,
-                        kotlin-stdlib-jdk8,
-                        kotlin-stdlib
-                    </excludeDependencies>
+                    <excludeDependencies/>
+                    <dumpInstructions>${project.build.directory}/bnd/dumpInstructions.txt</dumpInstructions>
+                    <dumpClasspath>${project.build.directory}/bnd/dumpClasspath.txt</dumpClasspath>
                     <supportedProjectTypes>
                         <supportedProjectType>jar</supportedProjectType>
                         <supportedProjectType>bundle</supportedProjectType>
@@ -72,12 +69,15 @@
                             org.openntf.langchain4j.xsp.*
                         </Export-Package>
                         <_exportcontents>
-							dev.langchain4j.*
+							dev.langchain4j.*,
+							org.openntf.langchain4j.domino.*
 						</_exportcontents>
+						<_dsannotations/>
+						<_metatypeannotations/>
+						<_cdiannotations/>
                         <Require-Bundle>
                             com.ibm.xsp.core,
-                            com.hcl.domino.jnx.xsp,
-                            org.openntf.langchain4j.domino;visibility:=reexport
+                            com.hcl.domino.jnx.xsp
                         </Require-Bundle>
                         <Import-Package>
                             org.osgi.framework
