--- a/project/release/langchain4j-domino-dist/pom.xml
+++ b/project/release/langchain4j-domino-dist/pom.xml
@@ -1,102 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.openntf</groupId>
-        <artifactId>langchain4j-domino</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
-    </parent>
-
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <artifactId>langchain4j-domino-dist</artifactId>
-    <name>Distribution ZIP for langchain4j-domino</name>
-    <packaging>pom</packaging>
-
-    <dependencies>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>langchain4j-domino-updatesite</artifactId>
-            <version>${project.version}</version>
-            <type>zip</type>
-        </dependency>
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
-                <groupId>org.reficio</groupId>
                 <artifactId>p2-maven-plugin</artifactId>
-                <version>1.3.0</version>
                 <executions>
                     <execution>
-                        <id>generate-site</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>site</goal>
-                        </goals>
                         <configuration>
                             <featureDefinitions>
                                 <feature>
-                                    <id>org.openntf.langchain4j.feature</id>
-                                    <version>${project.version}</version>
-                                    <label>Domino-langchain4j</label>
-                                    <providerName>OpenNTF</providerName>
-                                    <description>OpenNTF LangChain4j for Domino</description>
-                                    <copyright>2024 Serdar Basegmez</copyright>
-                                    <license>Apache License 2.0</license>
-                                    <generateSourceFeature>false</generateSourceFeature>
                                     <artifacts>
                                         <artifact>
-                                            <id>${project.groupId}:langchain4j-domino-xsp:${project.version}</id>
+                                            <id>${project.groupId}:${project.artifactId}:${project.version}</id>
                                             <transitive>false</transitive>
                                         </artifact>
+                                        <artifact>
+                                            <id>jakarta.mail:jakarta.mail-api:${jakarta-mail.version}</id>
+                                        </artifact>
+                                        <artifact>
+                                            <id>org.eclipse.angus:angus-mail:${angus-mail.version}</id>
+                                        </artifact>
                                     </artifacts>
+                                    <copyright>2024 Serdar Basegmez</copyright>
+                                    <description>Langchain4j and Domino XPages integration plugin</description>
+                                    <id>org.openntf.langchain4j.xsp.feature</id>
+                                    <label>OpenNTF Langchain4j for Domino</label>
+                                    <license>Apache License 2.0</license>
+                                    <providerName>OpenNTF</providerName>
+                                    <version>${project.version}</version>
                                 </feature>
                             </featureDefinitions>
                         </configuration>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <id>generate-site</id>
+                        <phase>package</phase>
                     </execution>
                 </executions>
+                <groupId>org.openntf.maven</groupId>
             </plugin>
             <plugin>
-                <groupId>org.darwino</groupId>
                 <artifactId>p2sitexml-maven-plugin</artifactId>
-                <version>1.3.0</version>
                 <executions>
                     <execution>
-                        <phase>prepare-package</phase>
+                        <configuration>
+                            <category>Langchain4j for Domino</category>
+                        </configuration>
                         <goals>
                             <goal>generate-site-xml</goal>
                         </goals>
-                        <configuration>
-                            <category>Domino-langchain4j</category>
-                        </configuration>
+                        <phase>package</phase>
                     </execution>
                 </executions>
+                <groupId>org.darwino</groupId>
             </plugin>
-
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
                         <descriptor>src/main/assembly/assembly.xml</descriptor>
                     </descriptors>
                     <finalName>domino-langchain4j-${project.version}</finalName>
-                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
                     </execution>
                 </executions>
+                <groupId>org.apache.maven.plugins</groupId>
             </plugin>
         </plugins>
     </build>
+
+    <modelVersion>4.0.0</modelVersion>
+    <name>Langchain4j Domino - Distribution ZIP</name>
+    <packaging>pom</packaging>
+
+    <parent>
+        <artifactId>langchain4j-domino-parent</artifactId>
+        <groupId>org.openntf</groupId>
+        <relativePath>../../pom.xml</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
 </project>
