--- a/project/bundles/org.openntf.langchain4j.domino/pom.xml
+++ b/project/bundles/org.openntf.langchain4j.domino/pom.xml
@@ -1,33 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openntf</groupId>
-        <artifactId>langchain4j-domino</artifactId>
+        <artifactId>langchain4j-domino-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>org.openntf.langchain4j.domino</artifactId>
-    <name>OpenNTF Langchain4j Domino Library</name>
+    <name>Langchain4j-Domino Integration Library</name>
+    <description>The core integration library integrating Langchain4j functionality for Domino databases</description>
 
     <dependencies>
+
+        <!-- Langchain4j -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j</artifactId>
+        </dependency>
+
+        <!-- Domino JNX -->
+        <dependency>
+            <groupId>com.hcl.domino</groupId>
+            <artifactId>domino-jnx-api-r14</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.hcl.domino</groupId>
+            <artifactId>domino-jnx-commons-r14</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.hcl.domino</groupId>
+            <artifactId>domino-jnx-jna-r14</artifactId>
+        </dependency>
+
+        <!-- Utilities -->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.18.1</version>
         </dependency>
+
+        <!-- TODO Remove Apache commons dependencies -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.17.0</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.18.0</version>
         </dependency>
     </dependencies>
 </project>
