--- a/project/bundles/org.openntf.langchain4j.xsp/pom.xml
+++ b/project/bundles/org.openntf.langchain4j.xsp/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openntf</groupId>
-        <artifactId>langchain4j-domino</artifactId>
+        <artifactId>langchain4j-domino-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>org.openntf.langchain4j.xsp</artifactId>
-    <name>XSP Library for langchain4j-domino</name>
+    <name>Core XSP Library for langchain4j-domino</name>
     <packaging>bundle</packaging>
 
     <dependencies>
@@ -21,23 +21,58 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Langchain4j libraries to reexport -->
+        <!-- This is transitive from the core, We shouldn't need it -->
+        <!--<dependency>-->
+        <!--    <groupId>dev.langchain4j</groupId>-->
+        <!--    <artifactId>langchain4j</artifactId>-->
+        <!--</dependency>-->
+
+        <!-- TODO: Check if we need to import just to reexport -->
+        <!--<dependency>-->
+        <!--    <groupId>dev.langchain4j</groupId>-->
+        <!--    <artifactId>langchain4j-open-ai</artifactId>-->
+        <!--</dependency>-->
+
+        <!-- Langchain4j Integrations to reexport -->
+        <!--<dependency>-->
+        <!--    <groupId>dev.langchain4j</groupId>-->
+        <!--    <artifactId>langchain4j-ollama</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--    <groupId>dev.langchain4j</groupId>-->
+        <!--    <artifactId>langchain4j-chroma</artifactId>-->
+        <!--</dependency>-->
+
+        <!-- Domino JNX -->
+        <!-- We don't use these yet -->
+        <!--<dependency>-->
+        <!--    <groupId>com.hcl.domino</groupId>-->
+        <!--    <artifactId>domino-jnx-api-r14</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--    <groupId>com.hcl.domino</groupId>-->
+        <!--    <artifactId>domino-jnx-commons-r14</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--    <groupId>com.hcl.domino</groupId>-->
+        <!--    <artifactId>domino-jnx-jna-r14</artifactId>-->
+        <!--</dependency>-->
+
         <!-- Domino Platform -->
         <dependency>
             <groupId>org.eclipse.angus</groupId>
             <artifactId>angus-mail</artifactId>
-            <version>2.0.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.openntf.xsp.stubs</groupId>
             <artifactId>com.ibm.xsp.core</artifactId>
-            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.framework</artifactId>
-            <version>1.8.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -47,34 +82,21 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>6.0.0</version>
-                <extensions>true</extensions>
                 <configuration>
-					<manifestLocation>META-INF</manifestLocation>
-                    <niceManifest>true</niceManifest>
                     <excludeDependencies/>
-                    <dumpInstructions>${project.build.directory}/bnd/dumpInstructions.txt</dumpInstructions>
-                    <dumpClasspath>${project.build.directory}/bnd/dumpClasspath.txt</dumpClasspath>
-                    <supportedProjectTypes>
-                        <supportedProjectType>jar</supportedProjectType>
-                        <supportedProjectType>bundle</supportedProjectType>
-                    </supportedProjectTypes>
-                    <supportIncrementalBuild>true</supportIncrementalBuild>
+                    <dumpInstructions>${project.build.directory}/bnd/instructions.txt</dumpInstructions>
+                    <dumpClasspath>${project.build.directory}/bnd/classpath.txt</dumpClasspath>
                     <instructions>
-                        <Automatic-Module-Name>org.openntf.langchain4j.xsp</Automatic-Module-Name>
-                        <Bundle-SymbolicName>org.openntf.langchain4j.xsp;singleton:=true</Bundle-SymbolicName>
-                        <Bundle-RequiredExecutionEnvironment>JavaSE-17</Bundle-RequiredExecutionEnvironment>
+                        <Automatic-Module-Name>${project.artifactId}</Automatic-Module-Name>
+                        <Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>
                         <Bundle-Activator>org.openntf.langchain4j.xsp.Activator</Bundle-Activator>
                         <Export-Package>
                             org.openntf.langchain4j.xsp.*
                         </Export-Package>
                         <_exportcontents>
-							dev.langchain4j.*,
-							org.openntf.langchain4j.domino.*
-						</_exportcontents>
-						<_dsannotations/>
-						<_metatypeannotations/>
-						<_cdiannotations/>
+                            dev.langchain4j.*,
+                            org.openntf.langchain4j.domino.*
+                        </_exportcontents>
                         <Require-Bundle>
                             com.ibm.xsp.core,
                             com.hcl.domino.jnx.xsp
@@ -85,68 +107,8 @@
                         <Embed-Dependency>*;scope=compile</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Embed-Directory>lib</Embed-Directory>
-
-                        <_removeheaders>Require-Capability</_removeheaders>
-
-                        <_snapshot>${osgi.qualifier}</_snapshot>
                     </instructions>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.openntf.maven</groupId>
-                <artifactId>p2-maven-plugin</artifactId>
-                <version>2.2.0</version>
-                <executions>
-                    <execution>
-                        <id>generate-site</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>site</goal>
-                        </goals>
-                        <configuration>
-                            <featureDefinitions>
-                                <feature>
-                                    <id>org.openntf.langchain4j.xsp.feature</id>
-                                    <version>${project.version}</version>
-                                    <label>OpenNTF Langchain4j for Domino</label>
-                                    <providerName>OpenNTF</providerName>
-                                    <description>Langchain4j and Domino XPages integration plugin</description>
-                                    <copyright>2024 Serdar Basegmez</copyright>
-                                    <license>Apache License 2.0</license>
-                                    <artifacts>
-                                        <artifact>
-                                            <id>${project.groupId}:${project.artifactId}:${project.version}</id>
-                                            <transitive>false</transitive>
-                                        </artifact>
-                                        <artifact>
-                                            <id>jakarta.mail:jakarta.mail-api:2.1.3</id>
-                                        </artifact>
-                                        <artifact>
-                                            <id>org.eclipse.angus:angus-mail:2.0.3</id>
-                                        </artifact>
-                                    </artifacts>
-                                </feature>
-                            </featureDefinitions>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.darwino</groupId>
-                <artifactId>p2sitexml-maven-plugin</artifactId>
-                <version>1.2.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>generate-site-xml</goal>
-                        </goals>
-                        <configuration>
-                            <category>Langchain4j for Domino</category>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
