--- a/osgi-deps/pom.xml
+++ b/osgi-deps/pom.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0"?>
 <project
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-        xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.openntf.langchain4j</groupId>
     <artifactId>osgi-deps</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <description>
-        Modified from https://github.com/OpenNTF/org.openntf.xsp.jakartaee/blob/develop/osgi-deps/pom.xml by Jesse Gallagher
-        This project exists to generate a local p2 site for use as part of the OSGi
-        target platform during compilation
+        Modified from https://github.com/OpenNTF/org.openntf.xsp.jakartaee/blob/develop/osgi-deps/pom.xml
+
+        Created by Jesse Gallagher, This project exists to generate a local p2 site for use as part of the
+        OSGi target platform during compilation
     </description>
 
     <packaging>pom</packaging>
@@ -42,9 +43,11 @@
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
         <osgi.qualifier>${maven.build.timestamp}</osgi.qualifier>
 
-        <version-langchain4j>0.36.2</version-langchain4j>
-        <version-jnx>1.44.0</version-jnx>
-        <version-jsoup>1.18.1</version-jsoup>
+        <langchain4j.version>0.36.2</langchain4j.version>
+        <domino-jnx.version>1.44.0</domino-jnx.version>
+        <jsoup.version>1.18.1</jsoup.version>
+        <openntf-p2-plugin.version>3.1.2</openntf-p2-plugin.version>
+        <maven-enforcer.version>3.1.0</maven-enforcer.version>
     </properties>
 
     <build>
@@ -52,7 +55,7 @@
             <plugin>
                 <groupId>org.openntf.maven</groupId>
                 <artifactId>p2-maven-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>${openntf-p2-plugin.version}</version>
                 <extensions>true</extensions>
 
                 <executions>
@@ -65,33 +68,92 @@
                         <configuration>
                             <p2>
                                 <!-- Testing Runtime -->
-                                <artifact><id>org.junit:4.12.0.v201504281640</id><source>true</source></artifact>
-                                <artifact><id>org.slf4j.api:1.7.2.v20121108-1250</id><source>true</source></artifact>
-                                <artifact><id>org.hamcrest.core:1.3.0.v201303031735</id><source>true</source></artifact>
+                                <artifact>
+                                    <id>org.junit:4.12.0.v201504281640</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>org.slf4j.api:1.7.2.v20121108-1250</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>org.hamcrest.core:1.3.0.v201303031735</id>
+                                    <source>true</source>
+                                </artifact>
                             </p2>
                             <artifacts>
                                 <!-- Testing Runtime -->
-                                <artifact><id>org.eclipse.platform:org.eclipse.equinox.launcher:1.4.0</id><source>true</source></artifact>
-                                <artifact><id>org.openntf.domino:org.openntf.domino.java.api.corba.patch:1.0.0</id></artifact>
+                                <artifact>
+                                    <id>org.eclipse.platform:org.eclipse.equinox.launcher:1.4.0</id>
+                                </artifact>
+                                <artifact>
+                                    <id>org.openntf.domino:org.openntf.domino.java.api.corba.patch:1.0.0</id>
+                                </artifact>
 
                                 <!-- Langchain4j -->
-                                <artifact><id>dev.langchain4j:langchain4j:${version-langchain4j}</id><source>true</source></artifact>
-                                <artifact><id>dev.langchain4j:langchain4j-open-ai:${version-langchain4j}</id><source>true</source></artifact>
-                                <artifact><id>dev.langchain4j:langchain4j-embeddings:${version-langchain4j}</id><source>true</source></artifact>
-                                <artifact><id>dev.langchain4j:langchain4j-ollama:${version-langchain4j}</id><source>true</source></artifact>
-                                <artifact><id>dev.langchain4j:langchain4j-milvus:${version-langchain4j}</id><source>true</source></artifact>
-                                <artifact><id>dev.langchain4j:langchain4j-chroma:${version-langchain4j}</id><source>true</source></artifact>
+                                <artifact>
+                                    <id>dev.langchain4j:langchain4j:${langchain4j.version}</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>dev.langchain4j:langchain4j-open-ai:${langchain4j.version}</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>dev.langchain4j:langchain4j-embeddings:${langchain4j.version}</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>
+                                        dev.langchain4j:langchain4j-embeddings-all-minilm-l6-v2:${langchain4j.version}
+                                    </id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>dev.langchain4j:langchain4j-ollama:${langchain4j.version}</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>dev.langchain4j:langchain4j-milvus:${langchain4j.version}</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>dev.langchain4j:langchain4j-chroma:${langchain4j.version}</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>dev.langchain4j:langchain4j-qdrant:${langchain4j.version}</id>
+                                    <source>true</source>
+                                </artifact>
 
                                 <!-- Domino JNX -->
-                                <artifact><id>com.hcl.domino:domino-jnx-api-r14:${version-jnx}</id><source>true</source></artifact>
-                                <artifact><id>com.hcl.domino:domino-jnx-commons-r14:${version-jnx}</id><source>true</source></artifact>
-                                <artifact><id>com.hcl.domino:domino-jnx-jna-r14:${version-jnx}</id><source>true</source></artifact>
+                                <artifact>
+                                    <id>com.hcl.domino:domino-jnx-api-r14:${domino-jnx.version}</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>com.hcl.domino:domino-jnx-commons-r14:${domino-jnx.version}</id>
+                                    <source>true</source>
+                                </artifact>
+                                <artifact>
+                                    <id>com.hcl.domino:domino-jnx-jna-r14:${domino-jnx.version}</id>
+                                    <source>true</source>
+                                </artifact>
 
-                                <artifact><id>com.sun.xml.bind:jaxb-impl:3.0.0</id></artifact>
-                                <artifact><id>com.sun.activation:jakarta.activation:2.0.1</id></artifact>
-                                <artifact><id>org.eclipse.angus:angus-mail:2.0.3</id></artifact>
+                                <artifact>
+                                    <id>com.sun.xml.bind:jaxb-impl:3.0.0</id>
+                                </artifact>
+                                <artifact>
+                                    <id>com.sun.activation:jakarta.activation:2.0.1</id>
+                                </artifact>
+                                <artifact>
+                                    <id>org.eclipse.angus:angus-mail:2.0.3</id>
+                                </artifact>
 
-<!--                                <artifact><id>org.jsoup:jsoup:${version-jsoup}</id><source>true</source></artifact>-->
+                                <artifact>
+                                    <id>org.jsoup:jsoup:${jsoup.version}</id>
+                                    <source>true</source>
+                                </artifact>
                             </artifacts>
                         </configuration>
                     </execution>
@@ -100,7 +162,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M1</version>
+                <version>${maven-enforcer.version}</version>
                 <executions>
                     <execution>
                         <id>enforce-maven-and-java</id>
@@ -121,7 +183,5 @@
                 </executions>
             </plugin>
         </plugins>
-
     </build>
-
 </project>
