--- a/baseline/pom.xml
+++ b/baseline/pom.xml
@@ -3,12 +3,14 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.openntf</groupId>
-    <artifactId>langchain4j-domino-parent</artifactId>
+    <groupId>org.openntf.langchain4j-domino</groupId>
+    <artifactId>baseline</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>OpenNTF LangChain4j for Domino</name>
+    <name>LangChain4j for Domino - Parent Settings</name>
+    <description>Common features, dependencies and configuration for LangChain4j Domino integration</description>
+    <inceptionYear>2024</inceptionYear>
 
     <licenses>
         <license>
@@ -24,12 +26,6 @@
         </developer>
     </developers>
 
-    <modules>
-        <module>bundles/org.openntf.langchain4j.domino</module>
-        <module>bundles/org.openntf.langchain4j.xsp</module>
-        <module>release/langchain4j-domino-dist</module>
-    </modules>
-
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -37,25 +33,35 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <!-- General -->
+        <license-developers>Serdar Basegmez</license-developers>
+        <license-year>2024</license-year>
+
         <!-- For XSP packaging -->
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
         <osgi.qualifier>${maven.build.timestamp}</osgi.qualifier>
 
-        <!-- Main dependencies -->
+        <!-- Main dependencies' versions -->
         <langchain4j.version>0.36.2</langchain4j.version>
         <domino-jnx.version>1.44.0</domino-jnx.version>
 
-        <!-- Utilities -->
+        <!-- Other libraries' versions -->
         <jsoup.version>1.18.1</jsoup.version>
         <commons-lang3.version>3.17.0</commons-lang3.version>
         <commons-io.version>2.18.0</commons-io.version>
-        <jakarta-mail.version>2.1.3</jakarta-mail.version>
         <xsp-stubs.version>1.0.0</xsp-stubs.version>
+        <jakarta-mail.version>2.1.3</jakarta-mail.version>
+        <sun-jakarta-acivation.version>2.0.1</sun-jakarta-acivation.version>
+        <sun-jaxb-impl.version>3.0.0</sun-jaxb-impl.version>
         <angus-mail.version>2.0.3</angus-mail.version>
         <osgi-framework.version>1.8.0</osgi-framework.version>
         <license-maven-plugin.version>4.6</license-maven-plugin.version>
+        <openntf-p2-plugin.version>3.1.2</openntf-p2-plugin.version>
+        <maven-enforcer.version>3.1.0</maven-enforcer.version>
+
     </properties>
 
+    <!-- Some OpenNTF-based plugins and packages are coming from these repositories -->
     <repositories>
         <repository>
             <id>artifactory.openntf.org</id>
@@ -63,7 +69,6 @@
             <url>https://artifactory.openntf.org/openntf</url>
         </repository>
     </repositories>
-
     <pluginRepositories>
         <pluginRepository>
             <id>artifactory.openntf.org</id>
@@ -74,7 +79,6 @@
 
     <dependencyManagement>
         <dependencies>
-
             <!-- Langchain4j -->
             <dependency>
                 <groupId>dev.langchain4j</groupId>
@@ -136,7 +140,7 @@
                 <version>${commons-io.version}</version>
             </dependency>
 
-            <!-- JNX Needs these dependencies -->
+            <!-- JNX and XSP projects need these dependencies -->
             <dependency>
                 <groupId>org.eclipse.angus</groupId>
                 <artifactId>angus-mail</artifactId>
@@ -156,84 +160,14 @@
     </dependencyManagement>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>com.mycila</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-                <version>${license-maven-plugin.version}</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                    <properties>
-                        <owner>Serdar Basegmez</owner>
-                        <copyrightYear>2025</copyrightYear>
-                    </properties>
-                    <licenseSets>
-                        <licenseSet>
-                            <header>LicenseTemplate.txt</header>
-                            <excludes>
-                                <exclude>**/pom.xml</exclude>
-                                <exclude>**/README.*</exclude>
-                                <exclude>src/test/resources/**</exclude>
-                                <exclude>src/main/resources/**</exclude>
-                                <exclude>**/build.properties</exclude>
-                                <exclude>**/LICENSE.*</exclude>
-                                <exclude>**/NOTICE.*</exclude>
-
-                                <exclude>**/odp/**</exclude>
-                                <exclude>docs/**</exclude>
-                            </excludes>
-                        </licenseSet>
-                    </licenseSets>
-
-                    <mapping>
-                        <xsp-config>XML_STYLE</xsp-config>
-                    </mapping>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>enforce-maven-and-java</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>3.0.1</version>
-                                </requireMavenVersion>
-                                <requireJavaVersion>
-                                    <version>17</version>
-                                </requireJavaVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-
         <pluginManagement>
             <plugins>
-                <!-- TODO Bump Plugin versions to the latest -->
+
+                <!-- Standard plugins: Declare to lockdown for versions -->
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>3.0.0-M1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.4.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -245,9 +179,24 @@
                     </configuration>
                 </plugin>
                 <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>3.1.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>3.1.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.3.1</version>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.5.2</version>
                     <configuration>
                         <skip>true</skip>
                         <trimStackTrace>false</trimStackTrace>
@@ -256,20 +205,57 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.4.2</version>
                 </plugin>
+
+                <!-- Maven tools plugins -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>3.7.1</version>
                 </plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>3.1.0</version>
+				</plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.3.0</version>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>${maven-enforcer.version}</version>
+                    <executions>
+                        <execution>
+                            <id>enforce-maven-and-java</id>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+                            <configuration>
+                                <rules>
+                                    <requireMavenVersion>
+                                        <version>3.0.1</version>
+                                    </requireMavenVersion>
+                                    <requireJavaVersion>
+                                        <version>17</version>
+                                    </requireJavaVersion>
+                                </rules>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
 
+                <!-- Misc Plugins -->
+                <plugin>
+                    <groupId>org.openntf.maven</groupId>
+                    <artifactId>p2-maven-plugin</artifactId>
+                    <extensions>true</extensions>
+                    <version>${openntf-p2-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.darwino</groupId>
+                    <artifactId>p2sitexml-maven-plugin</artifactId>
+                    <version>1.3.0</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
@@ -292,14 +278,37 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <groupId>org.openntf.maven</groupId>
-                    <artifactId>p2-maven-plugin</artifactId>
-                    <version>3.1.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.darwino</groupId>
-                    <artifactId>p2sitexml-maven-plugin</artifactId>
-                    <version>1.3.0</version>
+                    <groupId>com.mycila</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <version>${license-maven-plugin.version}</version>
+                    <configuration>
+                        <aggregate>true</aggregate>
+                        <properties>
+                            <owner>${license-developers}</owner>
+                            <copyrightYear>${license-year}</copyrightYear>
+                        </properties>
+                        <licenseSets>
+                            <licenseSet>
+                                <header>../LicenseTemplate.txt</header>
+                                <excludes>
+                                    <exclude>**/pom.xml</exclude>
+                                    <exclude>**/README.*</exclude>
+                                    <exclude>src/test/resources/**</exclude>
+                                    <exclude>src/main/resources/**</exclude>
+                                    <exclude>**/build.properties</exclude>
+                                    <exclude>**/LICENSE.*</exclude>
+                                    <exclude>**/NOTICE.*</exclude>
+
+                                    <exclude>**/odp/**</exclude>
+                                    <exclude>docs/**</exclude>
+                                </excludes>
+                            </licenseSet>
+                        </licenseSets>
+
+                        <mapping>
+                            <xsp-config>XML_STYLE</xsp-config>
+                        </mapping>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
